libs/pavex_cli/tests/ui_tests/cannot_register_an_error_handler_for_an_async_infallible_constructor/expectations/stderr.txt
Error: 
  × You registered an error handler for a constructor that does not return
  │ a `Result`.
    ╭─[src/lib.rs:22:1]
 22 │     bp.constructor(f!(crate::infallible_constructor), Lifecycle::RequestScoped)
 23 │         .error_handler(f!(crate::error_handler));
    ·                        ────────────┬───────────
    ·                                    ╰── The unnecessary error handler was registered here
 24 │     bp.route(f!(crate::request_handler), "/home");
    ╰────
  help: Remove the error handler, it is not needed. The constructor is
        infallible!